test(List): 학습 테스트 추가(List.of 예외 추가 및 Arrays.asList에서 변경)